# Stock_Market_Assit

./: .gitignore  README.md  Top500_Sample_Strategy_Playbook.xlsx  pyproject.toml  requirements.txt  settings.toml.example
.github/workflows/: pages.yml  scan.yml
config/: industry_mapping.csv
config/ticker_snapshots/: bse_eq.csv  nse_eq.csv
docs/: ANALYSIS_TEMPLATE.md  SCORING.md  STRATEGIES.md
scripts/: build_db.py  build_site.py  run_scan.py
site/: index.html
site/assets/: app.js  style.css
site/data/: categories.json  good_stocks.json  manifest.json  news.json
site/data/prices/: 20MICRONS.NS.csv  21STCENMGM.NS.csv  360ONE.NS.csv  3IINFOLTD.NS.csv  3MINDIA.NS.csv  3PLAND.NS.csv  5PAISA.NS.csv  63MOONS.NS.csv  A2ZINFRA.NS.csv  AAATECH.NS.csv  AADHARHFC.NS.csv  AAKASH.NS.csv  AAPL.csv  AAREYDRUGS.NS.csv  AARON.NS.csv  AARTECH.NS.csv  AARTIDRUGS.NS.csv  AARTIIND.NS.csv  AARTIPHARM.NS.csv  AARTISURF.NS.csv  AARVI.NS.csv  AAVAS.NS.csv  ABAN.NS.csv  ABB.NS.csv  ABBOTINDIA.NS.csv  ABCAPITAL.NS.csv  ABCOTS.NS.csv  ABDL.NS.csv  ABFRL.NS.csv  ABINFRA.NS.csv  ABLBL.NS.csv  ABMINTLLTD.NS.csv  ABREL.NS.csv  ABSLAMC.NS.csv  ACC.NS.csv  ACCELYA.NS.csv  ACCURACY.NS.csv  ACE.NS.csv  ACEINTEG.NS.csv  ACI.NS.csv  (+2185 more)
src/smassist/: __init__.py  analysis.py  cli.py  config.py  data.py  database.py  diagnostics.py  excel_io.py  exceptions.py  india_universe.py  log.py  news_rss.py  scanner.py  schemas.py  settings.py  strategies.py
src/smassist/resources/: groww_taxonomy.json
